feat: add endpoints
